syntax = "proto3";

package api.user.v1;

option go_package = "exp-gin/api/user/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.v1";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
  rpc GetUser (GetUserRequest) returns (GetUserReply);
  rpc ListUser (ListUserRequest) returns (ListUserReply);
}

message User {
  uint64 id       = 1;
  string nickname = 2;
  string username = 3;
  string password = 4;
  int64  gender   = 5;
  string mail     = 6;
  string phone    = 7;
}

message CreateUserRequest {
  string nickname = 1;
  string username = 2;
  string password = 3;
  int64  gender   = 4;
  string mail     = 5;
  string phone    = 6;
}
message CreateUserReply {
  User user = 1;
}

message UpdateUserRequest {
  uint64 id       = 1;
  string nickname = 2;
  string username = 3;
  string password = 4;
  int64  gender   = 5;
  string mail     = 6;
  string phone    = 7;
}
message UpdateUserReply {
  User user = 1;
}

message DeleteUserRequest {
  uint64 id = 1;
}
message DeleteUserReply {}

message GetUserRequest {
  uint64 id = 1;
}
message GetUserReply {
  User user = 1;
}

message ListUserRequest {}
message ListUserReply {
  repeated User users = 1;
}